# doctopdf

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  update-tap.yml
docs/: automator.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/: PROPOSAL.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-3-error-record-helper/: CHECKLIST.md  DESIGN.md  PROMPT.md  SPEC.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-3-error-record-helper/plan/: T1.1-error-record-helper-and-test.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-4-unit-test-suite/: CHECKLIST.md  DESIGN.md  PROMPT.md  SPEC.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-4-unit-test-suite/plan/: T1.1-test-scanner.md  T1.2-test-errors-and-fix.md  T1.4-dev-extra-extend.md  T2.1-test-converter.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-6-converter-exception-logging/: CHECKLIST.md  DESIGN.md  PROMPT.md  SPEC.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-7-ci-lint-pipeline/: CHECKLIST.md  DESIGN.md  PROMPT.md  SPEC.md
docs/plans/2026-07-16/issues-3-8-quality-sweep/issue-8-automator-doc-extract/: CHECKLIST.md  DESIGN.md  PROMPT.md  SPEC.md
doctopdf/: __init__.py  __main__.py  cli.py  config.py  converter.py  errors.py  logger.py  orchestrator.py  scanner.py
doctopdf/applescript/: check_word.applescript  export_document.applescript  export_document.js
tests/: test_cli_verbose.py  test_converter.py  test_converter_logging.py  test_errors.py  test_orchestrator_error_record.py  test_scanner.py
(+12 files in other folders)
