[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctopdf"
version = "1.0.0"
description = "Offline batch .doc/.docx → PDF converter using Microsoft Word on macOS"
readme = "README.md"
authors = [
    {name = "DocToPDF Team"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Word Processing",
]
keywords = ["docx", "doc", "pdf", "converter", "microsoft-word", "macos"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
convert-word-pdf = "doctopdf.cli:main"

[tool.setuptools.packages.find]
include = ["doctopdf", "doctopdf.*"]

[tool.setuptools.package-data]
doctopdf = ["applescript/*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
